Improved search strategy for build dependencies and fixed circular dependencies for some packages

--- a/packages/lcms2/config.yaml
+++ b/packages/lcms2/config.yaml
@@ -7,7 +7,7 @@ steps:
     dependencies:
       - dlfcn-win32
       - openjpeg
-      - libtiff
+      - libtiff:b
       - zlib
       - winpthreads
     run: build.sh
