--- a/packages/boost/config.yaml
+++ b/packages/boost/config.yaml
@@ -11,7 +11,7 @@ steps:
       - libiconv
       - libjpeg-turbo
       - libpng
-      - libtiff
+      - libtiff:b
       - openssl
       - xz
       - zlib
