Add emoji support for nice tree view and fix suffix for some libraries using meson

--- a/packages/CoinUtils/config.yaml
+++ b/packages/CoinUtils/config.yaml
@@ -1,6 +1,6 @@
 name: CoinUtils
 version: master
-url: https://github.com/coin-or/Osi.git
+url: https://github.com/coin-or/CoinUtils.git
 sha256:
 steps:
   a:
